skeplib/tests/fixtures/parser/valid/match_basic.sk
fn main() -> Int {
  let x = 2;
  match (x) {
    0 | 1 => { return 10; }
    2 => { return 20; }
    _ => { return 30; }
  }
}
