skeplib/tests/fixtures/parser/invalid/continue_missing_semicolon.sk
fn main() -> Int {
  while (true) {
    continue
  }
  return 0;
}
